Removed PageHeader component, implemented search for videos page, added animation for videos loading, fixed window buttons z-index

--- a/src/renderer/styles/index.css
+++ b/src/renderer/styles/index.css
@@ -88,7 +88,6 @@ button {
 .page {
   width: 100%;
   height: 100vh;
-  padding-top: 1rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
